[package]
name = "lateo"
version = "0.1.0"
authors = ["ljh-sh <lijunhao@x-cmd.com>"]
edition = "2021"
rust-version = "1.74"
description = "Imperceptible data embedding for images: steganography (covert payload) and watermarking (robust imprint). From Latin lateo — I lie hidden."
readme = "README.md"
homepage = "https://github.com/ljh-sh/lateo"
documentation = "https://github.com/ljh-sh/lateo#readme"
license = "Apache-2.0"
repository = "https://github.com/ljh-sh/lateo"
keywords = ["steganography", "watermark", "image", "embedding", "cli"]
categories = ["multimedia::images", "command-line-utilities", "cryptography"]
exclude = [".release-artifacts/", ".github/", "target/", "*.swp", "*.swo", "*~", ".DS_Store"]

[lib]
name = "lateo"
path = "src/lib.rs"

[[bin]]
name = "lateo"
path = "src/main.rs"

[dependencies]
# PNG decode/encode only (default-features off keeps JPEG/GIF/etc decoders out).
image = { version = "0.25", default-features = false, features = ["png"] }
# CLI argument parsing for the verbs (hide/extract/mark/verify).
clap = { version = "4.5", features = ["derive"] }

# Optional encrypt-then-embed: chacha20poly1305 AEAD + argon2id KDF + OS RNG.
# Off by default so the no-crypto build is zero-cost (invariant #4).
chacha20poly1305 = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
getrandom = { version = "0.4", optional = true }

[features]
default = []
encryption = ["dep:chacha20poly1305", "dep:argon2", "dep:getrandom"]

[profile.release]
opt-level = 3
lto = "thin"
strip = true
